name:                meakdotin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/DanMeakin/danmeakin.github.io#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Meakin
maintainer:          dan@meak.in
copyright:           2020 Dan Meakin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable meakdotin
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
